--- a/app/assets/styles/modules/_large-image-section.css
+++ b/app/assets/styles/modules/_large-image-section.css
@@ -2,6 +2,7 @@
     display: block;
     margin-right: auto;
     margin-left: auto;
+    overflow: hidden;
     width: 100%;
         @mixin atSmall {
         margin-top: 20px;
